# rustoon

./: Cargo.toml  README.md
.github/workflows/: build-apk.yml  deploy-pages.yml
crates/frontend/: Cargo.toml  Dioxus.toml  MainActivity.kt
crates/frontend/public/: index.html  style.css
crates/frontend/public/android-res/xml/: network_security_config.xml
crates/frontend/src/: anilist.rs  app.rs  icons.rs  main.rs  state.rs
crates/frontend/src/components/: bottom_nav.rs  comic_card.rs  mod.rs  storage.rs
crates/frontend/src/pages/: detail.rs  explore.rs  home.rs  library.rs  mod.rs  settings.rs
crates/shared/: Cargo.toml
crates/shared/src/: models.rs
