[package]
name = "rustoon-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
rustoon-shared = { path = "../shared" }
dioxus = { version = "0.7", features = ["router"] }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Element", "Headers", "Request", "RequestInit",
    "Response",
] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
